netxms_2.2.1/src/snmp/nxmibc/parser.output
Grammar

    0 $accept: ModuleDefinition $end

    1 ModuleDefinition: ModuleIdentifierAssignment AssignmentList End
    2                 | ModuleIdentifierAssignment End

    3 AssignmentList: AssignmentList Assignment
    4               | Assignment

    5 Assignment: ObjectIdentifierAssignment
    6           | ObjectIdentityAssignment
    7           | ObjectTypeAssignment
    8           | MacroAssignment
    9           | TypeOrValueAssignment
   10           | SnmpNotificationTypeAssignment
   11           | ModuleComplianceAssignment
   12           | SnmpNotificationGroupAssignment
   13           | SnmpObjectGroupAssignment
   14           | SnmpKeywordAssignment
   15           | AgentCapabilitiesAssignment
   16           | ModuleIdentityAssignment
   17           | ImportsAssignment
   18           | ExportsAssignment

   19 ModuleIdentifierAssignment: ModuleIdentifier

   20 ModuleIdentifier: UCidentifier DEFINITIONS_SYM ASSIGNMENT_SYM Begin
   21                 | UCidentifier DEFINITIONS_SYM ASSIGNMENT_SYM AUTOMATIC_SYM TAGS_SYM Begin

   22 ObjectIdentifierAssignment: LCidentifier OBJECT_IDENTIFIER_SYM AssignedIdentifier
   23                           | LCidentifier AssignedIdentifier

   24 AssignedIdentifier: ASSIGNMENT_SYM AssignedIdentifierList
   25                   | ASSIGNMENT_SYM Number

   26 AssignedIdentifierList: LEFT_BRACE_SYM ObjectIdentifierList RIGHT_BRACE_SYM

   27 ObjectIdentifierList: ObjectIdentifierList ObjectIdentifier
   28                     | ObjectIdentifier

   29 ObjectIdentifier: Number
   30                 | DefinedValue
   31                 | Identifier LEFT_PAREN_SYM Number RIGHT_PAREN_SYM

   32 NumericValue: NumberOrMinMax
   33             | DefinedValue
   34             | NumberOrMinMax DOT_SYM DOT_SYM NumberOrMinMax
   35             | Identifier LEFT_PAREN_SYM NumberOrMinMax RIGHT_PAREN_SYM

   36 NumberOrMinMax: Number
   37               | MIN_SYM
   38               | MAX_SYM

   39 DefinedValue: UCidentifier DOT_SYM LCidentifier
   40             | LCidentifier

   41 Number: NUMBER_SYM

   42 ObjectIdentityAssignment: LCidentifier OBJECT_IDENTITY_SYM SnmpStatusPart SnmpDescriptionPart SnmpReferencePart AssignedIdentifier

   43 ObjectTypeAssignment: Identifier OBJECT_TYPE_SYM SnmpSyntaxPart SnmpUnitsPart SnmpAccessPart SnmpStatusPart SnmpDescriptionPart SnmpReferencePart SnmpIndexPart SnmpDefValPart AssignedIdentifier

   44 ModuleIdentityAssignment: SnmpIdentityPart SnmpUpdatePart SnmpOrganisationPart SnmpContactInfoPart SnmpDescriptionPart SnmpRevisionPart AssignedIdentifier

   45 ImportsAssignment: IMPORTS_SYM SymbolsFromModuleList SEMI_COLON_SYM

   46 ExportsAssignment: EXPORTS_SYM SymbolList SEMI_COLON_SYM

   47 SnmpRevisionPart: SnmpRevisionList
   48                 | %empty

   49 SnmpRevisionList: SnmpRevisionList SnmpRevisionObject
   50                 | SnmpRevisionObject

   51 SnmpRevisionObject: REVISION_SYM CharString SnmpDescriptionPart

   52 SnmpIdentityPart: LCidentifier MODULE_IDENTITY_SYM

   53 SnmpOrganisationPart: ORGANIZATION_SYM CharString

   54 SnmpContactInfoPart: CONTACT_SYM CharString

   55 SnmpUpdatePart: UPDATE_SYM CharString

   56 SnmpDescriptionPart: DESCRIPTION_SYM CharString
   57                    | %empty

   58 ValueConstraint: LEFT_PAREN_SYM NumericValueConstraintList RIGHT_PAREN_SYM
   59                | LEFT_PAREN_SYM SIZE_SYM LEFT_PAREN_SYM NumericValueConstraintList RIGHT_PAREN_SYM RIGHT_PAREN_SYM
   60                | LEFT_BRACE_SYM NumericValueConstraintList RIGHT_BRACE_SYM

   61 NumericValueConstraintList: NumericValue BAR_SYM NumericValueConstraintList
   62                           | NumericValue COMMA_SYM NumericValueConstraintList
   63                           | NumericValue

   64 SnmpKeywordAssignment: SnmpKeywordName
   65                      | SnmpKeywordName SnmpKeywordValue
   66                      | SnmpKeywordName SnmpKeywordBinding SnmpKeywordValue

   67 SnmpKeywordName: KEYWORD_SYM ASSIGNMENT_SYM CharString

   68 SnmpKeywordValue: KEYWORD_VALUE_SYM ASSIGNMENT_SYM CharString

   69 SnmpKeywordBinding: KEYWORD_BIND_SYM ASSIGNMENT_SYM LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM

   70 SnmpSyntax: SYNTAX_SYM Type

   71 SnmpSyntaxPart: SnmpSyntax
   72               | %empty

   73 SnmpUnitsPart: UNITS_SYM CharString
   74              | %empty

   75 SnmpWriteSyntaxPart: WRITE_SYNTAX_SYM Type
   76                    | %empty

   77 SnmpCreationPart: CREATION_REQUIRES_SYM LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM
   78                 | %empty

   79 TypeOrValueAssignment: BuiltInTypeAssignment
   80                      | UCidentifier ASSIGNMENT_SYM TextualConventionAssignment
   81                      | UCidentifier ASSIGNMENT_SYM Type
   82                      | UCidentifier ASSIGNMENT_SYM SEQUENCE_SYM SequenceAssignment
   83                      | LCidentifier ASSIGNMENT_SYM SEQUENCE_SYM SequenceAssignment
   84                      | UCidentifier ASSIGNMENT_SYM CHOICE_SYM SequenceAssignment
   85                      | UCidentifier ASSIGNMENT_SYM Value

   86 Type: BuiltInType
   87     | NamedType
   88     | BuiltInType ValueConstraint
   89     | NamedType ValueConstraint

   90 NamedType: SnmpTypeTagPart Identifier

   91 BuiltInType: SnmpTypeTagPart INTEGER_SYM
   92            | SnmpTypeTagPart IMPLICIT_SYM INTEGER_SYM
   93            | SnmpTypeTagPart INTEGER32_SYM
   94            | SnmpTypeTagPart UNSIGNED32_SYM
   95            | SnmpTypeTagPart COUNTER_SYM
   96            | SnmpTypeTagPart COUNTER32_SYM
   97            | SnmpTypeTagPart COUNTER64_SYM
   98            | SnmpTypeTagPart GAUGE32_SYM
   99            | SnmpTypeTagPart TIMETICKS_SYM
  100            | SEQUENCE_SYM OF_SYM NamedType
  101            | SnmpTypeTagPart OBJECT_IDENTIFIER_SYM
  102            | SnmpTypeTagPart OctetStringType

  103 BuiltInTypeAssignment: IP_ADDRESS_SYM ASSIGNMENT_SYM TypeOrTextualConvention
  104                      | OPAQUE_SYM ASSIGNMENT_SYM TypeOrTextualConvention
  105                      | INTEGER32_SYM ASSIGNMENT_SYM TypeOrTextualConvention
  106                      | UNSIGNED32_SYM ASSIGNMENT_SYM TypeOrTextualConvention
  107                      | TIMETICKS_SYM ASSIGNMENT_SYM TypeOrTextualConvention
  108                      | COUNTER_SYM ASSIGNMENT_SYM TypeOrTextualConvention
  109                      | COUNTER32_SYM ASSIGNMENT_SYM TypeOrTextualConvention
  110                      | COUNTER64_SYM ASSIGNMENT_SYM TypeOrTextualConvention
  111                      | GAUGE32_SYM ASSIGNMENT_SYM TypeOrTextualConvention

  112 TypeOrTextualConvention: Type
  113                        | TextualConventionAssignment

  114 MacroAssignment: MACRO_SYM ASSIGNMENT_SYM Begin TokenList End

  115 TokenList: TokenList TokenObject
  116          | TokenObject

  117 TokenObject: TOKEN_SYM

  118 TextualConventionAssignment: TEXTUAL_CONVENTION_SYM SnmpDisplayHintPart SnmpStatusPart SnmpDescriptionPart SnmpReferencePart SnmpSyntaxPart

  119 SnmpNotificationTypeAssignment: LCidentifier NOTIFICATION_TYPE_SYM SnmpObjectsPart SnmpAccessPart SnmpStatusPart SnmpDescriptionPart SnmpReferencePart AssignedIdentifier
  120                               | LCidentifier TRAP_TYPE_SYM ENTERPRISE_SYM LCidentifier SnmpTrapVariablePart SnmpDescriptionPart SnmpReferencePart AssignedIdentifier

  121 SnmpTrapVariablePart: SnmpTrapVariableList
  122                     | %empty

  123 SnmpTrapVariableList: VARIABLES_SYM LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM

  124 SnmpMandatoryGroupPart: SnmpMandatoryGroupList
  125                       | %empty

  126 SnmpMandatoryGroupList: SnmpMandatoryGroupList SnmpMandatoryGroup
  127                       | SnmpMandatoryGroup

  128 SnmpMandatoryGroup: MANDATORY_GROUPS_SYM LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM

  129 SnmpCompliancePart: SnmpComplianceList
  130                   | %empty

  131 SnmpComplianceList: SnmpComplianceList SnmpComplianceObject
  132                   | SnmpComplianceObject

  133 SnmpComplianceObject: OBJECT_SYM LCidentifier SnmpSyntaxPart SnmpWriteSyntaxPart SnmpAccessPart SnmpDescriptionPart
  134                     | GROUP_SYM LCidentifier SnmpDescriptionPart

  135 SnmpObjectsPart: OBJECTS_SYM LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM
  136                | OBJECTS_SYM LEFT_BRACE_SYM RIGHT_BRACE_SYM
  137                | NOTIFICATIONS_SYM LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM
  138                | NOTIFICATIONS_SYM LEFT_BRACE_SYM RIGHT_BRACE_SYM
  139                | %empty

  140 SnmpObjectGroupAssignment: LCidentifier OBJECT_GROUP_SYM SnmpObjectsPart SnmpStatusPart SnmpDescriptionPart SnmpReferencePart AssignedIdentifier

  141 SnmpNotificationGroupAssignment: LCidentifier NOTIFICATION_GROUP_SYM SnmpObjectsPart SnmpStatusPart SnmpDescriptionPart SnmpReferencePart AssignedIdentifier

  142 ModuleComplianceAssignment: LCidentifier MODULE_COMPLIANCE_SYM SnmpStatusPart SnmpDescriptionPart SnmpReferencePart SnmpModuleComplianceList AssignedIdentifier

  143 SnmpModuleComplianceList: SnmpModuleComplianceList SnmpModuleComplianceObject
  144                         | SnmpModuleComplianceObject

  145 SnmpModuleComplianceObject: MODULE_SYM OptionalModuleName SnmpMandatoryGroupPart SnmpCompliancePart

  146 OptionalModuleName: UCidentifier
  147                   | %empty

  148 SnmpVariationsListPart: SnmpVariationsList
  149                       | %empty

  150 SnmpVariationsList: SnmpVariationsList SnmpVariationPart
  151                   | SnmpVariationPart

  152 SnmpVariationPart: VARIATION_SYM LCidentifier SnmpSyntaxPart SnmpWriteSyntaxPart SnmpAccessPart SnmpCreationPart SnmpDefValPart SnmpDescriptionPart

  153 ModuleCapabilitiesList: ModuleCapabilitiesList ModuleCapabilitiesAssignment
  154                       | ModuleCapabilitiesAssignment

  155 ModuleCapabilitiesAssignment: SUPPORTS_SYM UCidentifier INCLUDES_SYM LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM SnmpVariationsListPart
  156                             | ModuleIdentifier INCLUDES_SYM SymbolList SnmpVariationsListPart

  157 AgentCapabilitiesAssignment: LCidentifier AGENT_CAPABILITIES_SYM PRODUCT_RELEASE_SYM CharString SnmpStatusPart SnmpDescriptionPart SnmpReferencePart ModuleCapabilitiesList AssignedIdentifier

  158 SnmpAccessPart: ACCESS_SYM LCidentifier
  159               | MAX_ACCESS_SYM LCidentifier
  160               | MIN_ACCESS_SYM LCidentifier
  161               | %empty

  162 SnmpStatusPart: STATUS_SYM LCidentifier

  163 SnmpReferencePart: REFERENCE_SYM CharString
  164                  | %empty

  165 SnmpDisplayHintPart: DISPLAY_HINT_SYM CharString
  166                    | %empty

  167 SnmpIndexPart: INDEX_SYM LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM
  168              | AUGMENTS_SYM LEFT_BRACE_SYM DefinedValue RIGHT_BRACE_SYM
  169              | %empty

  170 SnmpDefValPart: DEFVAL_SYM LEFT_BRACE_SYM BinaryString RIGHT_BRACE_SYM
  171               | DEFVAL_SYM LEFT_BRACE_SYM HexString RIGHT_BRACE_SYM
  172               | DEFVAL_SYM LEFT_BRACE_SYM CharString RIGHT_BRACE_SYM
  173               | DEFVAL_SYM LEFT_BRACE_SYM DefValList RIGHT_BRACE_SYM
  174               | DEFVAL_SYM AssignedIdentifierList
  175               | %empty

  176 DefValList: DefValListElement COMMA_SYM DefValList
  177           | DefValListElement

  178 DefValListElement: LEFT_BRACE_SYM SymbolList RIGHT_BRACE_SYM
  179                  | LEFT_BRACE_SYM RIGHT_BRACE_SYM

  180 BinaryString: BSTRING_SYM

  181 HexString: HSTRING_SYM

  182 CharString: CSTRING_SYM

  183 SymbolsFromModuleList: SymbolsFromModuleList SymbolsFromModule
  184                      | SymbolsFromModule

  185 SymbolsFromModule: SymbolList FROM_SYM UCidentifier

  186 SymbolList: SymbolList COMMA_SYM Symbol
  187           | Symbol

  188 Symbol: UCidentifier
  189       | LCidentifier
  190       | IMPLIED_SYM LCidentifier

  191 SequenceItem: Identifier Type

  192 SequenceList: SequenceItem
  193             | SequenceList COMMA_SYM SequenceItem

  194 SequenceAssignment: LEFT_BRACE_SYM SequenceList RIGHT_BRACE_SYM

  195 SnmpTypeTagPart: SnmpTypeTagList
  196                | %empty

  197 SnmpTypeTagList: SnmpTypeTagList SnmpTypeTagItem
  198                | SnmpTypeTagItem

  199 SnmpTypeTagItem: LEFT_BRACKET_SYM UCidentifier Number RIGHT_BRACKET_SYM

  200 OctetStringType: OCTET_SYM STRING_SYM
  201                | EXPLICIT_SYM OCTET_SYM STRING_SYM
  202                | IMPLICIT_SYM OCTET_SYM STRING_SYM
  203                | IP_ADDRESS_SYM
  204                | NETWORK_ADDRESS_SYM
  205                | OPAQUE_SYM
  206                | BITS_SYM

  207 Value: Number
  208      | HexString
  209      | BinaryString
  210      | CharString

  211 Identifier: UCidentifier
  212           | LCidentifier

  213 UCidentifier: UCASEFIRST_IDENT_SYM

  214 LCidentifier: LCASEFIRST_IDENT_SYM

  215 End: END_SYM

  216 Begin: BEGIN_SYM


Terminals, with rules where they appear

$end (0) 0
error (256)
ENTERPRISE_SYM (258) 120
TRAP_TYPE_SYM (259) 120
VARIABLES_SYM (260) 123
EXPLICIT_SYM (261) 201
IMPLICIT_SYM (262) 92 202
IMPLIED_SYM (263) 190
RIGHT_BRACE_SYM (264) 26 60 69 77 123 128 135 136 137 138 155 167 168
    170 171 172 173 178 179 194
LEFT_BRACE_SYM (265) 26 60 69 77 123 128 135 136 137 138 155 167 168
    170 171 172 173 178 179 194
RIGHT_BRACKET_SYM (266) 199
LEFT_BRACKET_SYM (267) 199
DEFINITIONS_SYM (268) 20 21
ASSIGNMENT_SYM (269) 20 21 24 25 67 68 69 80 81 82 83 84 85 103 104
    105 106 107 108 109 110 111 114
BEGIN_SYM (270) 216
END_SYM (271) 215
FROM_SYM (272) 185
IMPORTS_SYM (273) 45
EXPORTS_SYM (274) 46
COMMA_SYM (275) 62 176 186 193
SEMI_COLON_SYM (276) 45 46
DOT_SYM (277) 34 39
DESCRIPTION_SYM (278) 56
ORGANIZATION_SYM (279) 53
CONTACT_SYM (280) 54
UPDATE_SYM (281) 55
MODULE_IDENTITY_SYM (282) 52
MODULE_COMPLIANCE_SYM (283) 142
OBJECT_IDENTIFIER_SYM (284) 22 101
OBJECT_TYPE_SYM (285) 43
OBJECT_GROUP_SYM (286) 140
OBJECT_IDENTITY_SYM (287) 42
OBJECTS_SYM (288) 135 136
MANDATORY_GROUPS_SYM (289) 128
GROUP_SYM (290) 134
AGENT_CAPABILITIES_SYM (291) 157
KEYWORD_SYM (292) 67
KEYWORD_VALUE_SYM (293) 68
KEYWORD_BIND_SYM (294) 69
TOKEN_SYM (295) 117
INTEGER_SYM (296) 91 92
INTEGER32_SYM (297) 93 105
UNSIGNED32_SYM (298) 94 106
GAUGE32_SYM (299) 98 111
COUNTER_SYM (300) 95 108
COUNTER32_SYM (301) 96 109
COUNTER64_SYM (302) 97 110
BITS_SYM (303) 206
STRING_SYM (304) 200 201 202
OCTET_SYM (305) 200 201 202
SEQUENCE_SYM (306) 82 83 100
OF_SYM (307) 100
TIMETICKS_SYM (308) 99 107
IP_ADDRESS_SYM (309) 103 203
NETWORK_ADDRESS_SYM (310) 204
OPAQUE_SYM (311) 104 205
REVISION_SYM (312) 51
TEXTUAL_CONVENTION_SYM (313) 118
ACCESS_SYM (314) 158
MAX_ACCESS_SYM (315) 159
MIN_ACCESS_SYM (316) 160
SYNTAX_SYM (317) 70
STATUS_SYM (318) 162
INDEX_SYM (319) 167
REFERENCE_SYM (320) 163
DEFVAL_SYM (321) 170 171 172 173 174
LEFT_PAREN_SYM (322) 31 35 58 59
RIGHT_PAREN_SYM (323) 31 35 58 59
NOTIFICATIONS_SYM (324) 137 138
NOTIFICATION_GROUP_SYM (325) 141
NOTIFICATION_TYPE_SYM (326) 119
SIZE_SYM (327) 59
BAR_SYM (328) 61
VARIATION_SYM (329) 152
WRITE_SYNTAX_SYM (330) 75
SUPPORTS_SYM (331) 155
INCLUDES_SYM (332) 155 156
CREATION_REQUIRES_SYM (333) 77
PRODUCT_RELEASE_SYM (334) 157
CHOICE_SYM (335) 84
UNITS_SYM (336) 73
AUGMENTS_SYM (337) 168
OBJECT_SYM (338) 133
TAGS_SYM (339) 21
AUTOMATIC_SYM (340) 21
MIN_SYM (341) 37
MAX_SYM (342) 38
MODULE_SYM (343) 145
MACRO_SYM (344) 114
UCASEFIRST_IDENT_SYM (345) 213
LCASEFIRST_IDENT_SYM (346) 214
BSTRING_SYM (347) 180
HSTRING_SYM (348) 181
CSTRING_SYM (349) 182
DISPLAY_HINT_SYM (350) 165
NUMBER_SYM (351) 41


Nonterminals, with rules where they appear

$accept (97)
    on left: 0
ModuleDefinition (98)
    on left: 1 2, on right: 0
AssignmentList (99)
    on left: 3 4, on right: 1 3
Assignment (100)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 3 4
ModuleIdentifierAssignment (101)
    on left: 19, on right: 1 2
ModuleIdentifier (102)
    on left: 20 21, on right: 19 156
ObjectIdentifierAssignment (103)
    on left: 22 23, on right: 5
AssignedIdentifier (104)
    on left: 24 25, on right: 22 23 42 43 44 119 120 140 141 142 157
AssignedIdentifierList (105)
    on left: 26, on right: 24 174
ObjectIdentifierList (106)
    on left: 27 28, on right: 26 27
ObjectIdentifier (107)
    on left: 29 30 31, on right: 27 28
NumericValue (108)
    on left: 32 33 34 35, on right: 61 62 63
NumberOrMinMax (109)
    on left: 36 37 38, on right: 32 34 35
DefinedValue (110)
    on left: 39 40, on right: 30 33 168
Number (111)
    on left: 41, on right: 25 29 31 36 199 207
ObjectIdentityAssignment (112)
    on left: 42, on right: 6
ObjectTypeAssignment (113)
    on left: 43, on right: 7
ModuleIdentityAssignment (114)
    on left: 44, on right: 16
ImportsAssignment (115)
    on left: 45, on right: 17
ExportsAssignment (116)
    on left: 46, on right: 18
SnmpRevisionPart (117)
    on left: 47 48, on right: 44
SnmpRevisionList (118)
    on left: 49 50, on right: 47 49
SnmpRevisionObject (119)
    on left: 51, on right: 49 50
SnmpIdentityPart (120)
    on left: 52, on right: 44
SnmpOrganisationPart (121)
    on left: 53, on right: 44
SnmpContactInfoPart (122)
    on left: 54, on right: 44
SnmpUpdatePart (123)
    on left: 55, on right: 44
SnmpDescriptionPart (124)
    on left: 56 57, on right: 42 43 44 51 118 119 120 133 134 140 141
    142 152 157
ValueConstraint (125)
    on left: 58 59 60, on right: 88 89
NumericValueConstraintList (126)
    on left: 61 62 63, on right: 58 59 60 61 62
SnmpKeywordAssignment (127)
    on left: 64 65 66, on right: 14
SnmpKeywordName (128)
    on left: 67, on right: 64 65 66
SnmpKeywordValue (129)
    on left: 68, on right: 65 66
SnmpKeywordBinding (130)
    on left: 69, on right: 66
SnmpSyntax (131)
    on left: 70, on right: 71
SnmpSyntaxPart (132)
    on left: 71 72, on right: 43 118 133 152
SnmpUnitsPart (133)
    on left: 73 74, on right: 43
SnmpWriteSyntaxPart (134)
    on left: 75 76, on right: 133 152
SnmpCreationPart (135)
    on left: 77 78, on right: 152
TypeOrValueAssignment (136)
    on left: 79 80 81 82 83 84 85, on right: 9
Type (137)
    on left: 86 87 88 89, on right: 70 75 81 112 191
NamedType (138)
    on left: 90, on right: 87 89 100
BuiltInType (139)
    on left: 91 92 93 94 95 96 97 98 99 100 101 102, on right: 86 88
BuiltInTypeAssignment (140)
    on left: 103 104 105 106 107 108 109 110 111, on right: 79
TypeOrTextualConvention (141)
    on left: 112 113, on right: 103 104 105 106 107 108 109 110 111
MacroAssignment (142)
    on left: 114, on right: 8
TokenList (143)
    on left: 115 116, on right: 114 115
TokenObject (144)
    on left: 117, on right: 115 116
TextualConventionAssignment (145)
    on left: 118, on right: 80 113
SnmpNotificationTypeAssignment (146)
    on left: 119 120, on right: 10
SnmpTrapVariablePart (147)
    on left: 121 122, on right: 120
SnmpTrapVariableList (148)
    on left: 123, on right: 121
SnmpMandatoryGroupPart (149)
    on left: 124 125, on right: 145
SnmpMandatoryGroupList (150)
    on left: 126 127, on right: 124 126
SnmpMandatoryGroup (151)
    on left: 128, on right: 126 127
SnmpCompliancePart (152)
    on left: 129 130, on right: 145
SnmpComplianceList (153)
    on left: 131 132, on right: 129 131
SnmpComplianceObject (154)
    on left: 133 134, on right: 131 132
SnmpObjectsPart (155)
    on left: 135 136 137 138 139, on right: 119 140 141
SnmpObjectGroupAssignment (156)
    on left: 140, on right: 13
SnmpNotificationGroupAssignment (157)
    on left: 141, on right: 12
ModuleComplianceAssignment (158)
    on left: 142, on right: 11
SnmpModuleComplianceList (159)
    on left: 143 144, on right: 142 143
SnmpModuleComplianceObject (160)
    on left: 145, on right: 143 144
OptionalModuleName (161)
    on left: 146 147, on right: 145
SnmpVariationsListPart (162)
    on left: 148 149, on right: 155 156
SnmpVariationsList (163)
    on left: 150 151, on right: 148 150
SnmpVariationPart (164)
    on left: 152, on right: 150 151
ModuleCapabilitiesList (165)
    on left: 153 154, on right: 153 157
ModuleCapabilitiesAssignment (166)
    on left: 155 156, on right: 153 154
AgentCapabilitiesAssignment (167)
    on left: 157, on right: 15
SnmpAccessPart (168)
    on left: 158 159 160 161, on right: 43 119 133 152
SnmpStatusPart (169)
    on left: 162, on right: 42 43 118 119 140 141 142 157
SnmpReferencePart (170)
    on left: 163 164, on right: 42 43 118 119 120 140 141 142 157
SnmpDisplayHintPart (171)
    on left: 165 166, on right: 118
SnmpIndexPart (172)
    on left: 167 168 169, on right: 43
SnmpDefValPart (173)
    on left: 170 171 172 173 174 175, on right: 43 152
DefValList (174)
    on left: 176 177, on right: 173 176
DefValListElement (175)
    on left: 178 179, on right: 176 177
BinaryString (176)
    on left: 180, on right: 170 209
HexString (177)
    on left: 181, on right: 171 208
CharString (178)
    on left: 182, on right: 51 53 54 55 56 67 68 73 157 163 165 172
    210
SymbolsFromModuleList (179)
    on left: 183 184, on right: 45 183
SymbolsFromModule (180)
    on left: 185, on right: 183 184
SymbolList (181)
    on left: 186 187, on right: 46 69 77 123 128 135 137 155 156 167
    178 185 186
Symbol (182)
    on left: 188 189 190, on right: 186 187
SequenceItem (183)
    on left: 191, on right: 192 193
SequenceList (184)
    on left: 192 193, on right: 193 194
SequenceAssignment (185)
    on left: 194, on right: 82 83 84
SnmpTypeTagPart (186)
    on left: 195 196, on right: 90 91 92 93 94 95 96 97 98 99 101 102
SnmpTypeTagList (187)
    on left: 197 198, on right: 195 197
SnmpTypeTagItem (188)
    on left: 199, on right: 197 198
OctetStringType (189)
    on left: 200 201 202 203 204 205 206, on right: 102
Value (190)
    on left: 207 208 209 210, on right: 85
Identifier (191)
    on left: 211 212, on right: 31 35 43 90 191
UCidentifier (192)
    on left: 213, on right: 20 21 39 80 81 82 84 85 146 155 185 188
    199 211
LCidentifier (193)
    on left: 214, on right: 22 23 39 40 42 52 83 119 120 133 134 140
    141 142 152 157 158 159 160 162 189 190 212
End (194)
    on left: 215, on right: 1 2 114
Begin (195)
    on left: 216, on right: 20 21 114


State 0

    0 $accept: . ModuleDefinition $end

    UCASEFIRST_IDENT_SYM  shift, and go to state 1

    ModuleDefinition            go to state 2
    ModuleIdentifierAssignment  go to state 3
    ModuleIdentifier            go to state 4
    UCidentifier                go to state 5


State 1

  213 UCidentifier: UCASEFIRST_IDENT_SYM .

    $default  reduce using rule 213 (UCidentifier)


State 2

    0 $accept: ModuleDefinition . $end

    $end  shift, and go to state 6


State 3

    1 ModuleDefinition: ModuleIdentifierAssignment . AssignmentList End
    2                 | ModuleIdentifierAssignment . End

    END_SYM               shift, and go to state 7
    IMPORTS_SYM           shift, and go to state 8
    EXPORTS_SYM           shift, and go to state 9
    KEYWORD_SYM           shift, and go to state 10
    INTEGER32_SYM         shift, and go to state 11
    UNSIGNED32_SYM        shift, and go to state 12
    GAUGE32_SYM           shift, and go to state 13
    COUNTER_SYM           shift, and go to state 14
    COUNTER32_SYM         shift, and go to state 15
    COUNTER64_SYM         shift, and go to state 16
    TIMETICKS_SYM         shift, and go to state 17
    IP_ADDRESS_SYM        shift, and go to state 18
    OPAQUE_SYM            shift, and go to state 19
    MACRO_SYM             shift, and go to state 20
    UCASEFIRST_IDENT_SYM  shift, and go to state 1
    LCASEFIRST_IDENT_SYM  shift, and go to state 21

    AssignmentList                   go to state 22
    Assignment                       go to state 23
    ObjectIdentifierAssignment       go to state 24
    ObjectIdentityAssignment         go to state 25
    ObjectTypeAssignment             go to state 26
    ModuleIdentityAssignment         go to state 27
    ImportsAssignment                go to state 28
    ExportsAssignment                go to state 29
    SnmpIdentityPart                 go to state 30
    SnmpKeywordAssignment            go to state 31
    SnmpKeywordName                  go to state 32
    TypeOrValueAssignment            go to state 33
    BuiltInTypeAssignment            go to state 34
    MacroAssignment                  go to state 35
    SnmpNotificationTypeAssignment   go to state 36
    SnmpObjectGroupAssignment        go to state 37
    SnmpNotificationGroupAssignment  go to state 38
    ModuleComplianceAssignment       go to state 39
    AgentCapabilitiesAssignment      go to state 40
    Identifier                       go to state 41
    UCidentifier                     go to state 42
    LCidentifier                     go to state 43
    End                              go to state 44


State 4

   19 ModuleIdentifierAssignment: ModuleIdentifier .

    $default  reduce using rule 19 (ModuleIdentifierAssignment)


State 5

   20 ModuleIdentifier: UCidentifier . DEFINITIONS_SYM ASSIGNMENT_SYM Begin
   21                 | UCidentifier . DEFINITIONS_SYM ASSIGNMENT_SYM AUTOMATIC_SYM TAGS_SYM Begin

    DEFINITIONS_SYM  shift, and go to state 45


State 6

    0 $accept: ModuleDefinition $end .

    $default  accept


State 7

  215 End: END_SYM .

    $default  reduce using rule 215 (End)


State 8

   45 ImportsAssignment: IMPORTS_SYM . SymbolsFromModuleList SEMI_COLON_SYM

    IMPLIED_SYM           shift, and go to state 46
    UCASEFIRST_IDENT_SYM  shift, and go to state 1
    LCASEFIRST_IDENT_SYM  shift, and go to state 21

    SymbolsFromModuleList  go to state 47
    SymbolsFromModule      go to state 48
    SymbolList             go to state 49
    Symbol                 go to state 50
    UCidentifier           go to state 51
    LCidentifier           go to state 52


State 9

   46 ExportsAssignment: EXPORTS_SYM . SymbolList SEMI_COLON_SYM

    IMPLIED_SYM           shift, and go to state 46
    UCASEFIRST_IDENT_SYM  shift, and go to state 1
    LCASEFIRST_IDENT_SYM  shift, and go to state 21

    SymbolList    go to state 53
    Symbol        go to state 50
    UCidentifier  go to state 51
    LCidentifier  go to state 52


State 10

   67 SnmpKeywordName: KEYWORD_SYM . ASSIGNMENT_SYM CharString

    ASSIGNMENT_SYM  shift, and go to state 54


State 11

  105 BuiltInTypeAssignment: INTEGER32_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 55


State 12

  106 BuiltInTypeAssignment: UNSIGNED32_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 56


State 13

  111 BuiltInTypeAssignment: GAUGE32_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 57


State 14

  108 BuiltInTypeAssignment: COUNTER_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 58


State 15

  109 BuiltInTypeAssignment: COUNTER32_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 59


State 16

  110 BuiltInTypeAssignment: COUNTER64_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 60


State 17

  107 BuiltInTypeAssignment: TIMETICKS_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 61


State 18

  103 BuiltInTypeAssignment: IP_ADDRESS_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 62


State 19

  104 BuiltInTypeAssignment: OPAQUE_SYM . ASSIGNMENT_SYM TypeOrTextualConvention

    ASSIGNMENT_SYM  shift, and go to state 63


State 20

  114 MacroAssignment: MACRO_SYM . ASSIGNMENT_SYM Begin TokenList End

    ASSIGNMENT_SYM  shift, and go to state 64


State 21

  214 LCidentifier: LCASEFIRST_IDENT_SYM .

    $default  reduce using rule 214 (LCidentifier)


State 22

    1 ModuleDefinition: ModuleIdentifierAssignment AssignmentList . End
    3 AssignmentList: AssignmentList . Assignment

    END_SYM               shift, and go to state 7
    IMPORTS_SYM           shift, and go to state 8
    EXPORTS_SYM           shift, and go to state 9
    KEYWORD_SYM           shift, and go to state 10
    INTEGER32_SYM         shift, and go to state 11
    UNSIGNED32_SYM        shift, and go to state 12
    GAUGE32_SYM           shift, and go to state 13
    COUNTER_SYM           shift, and go to state 14
    COUNTER32_SYM         shift, and go to state 15
    COUNTER64_SYM         shift, and go to state 16
    TIMETICKS_SYM         shift, and go to state 17
    IP_ADDRESS_SYM        shift, and go to state 18
    OPAQUE_SYM            shift, and go to state 19
    MACRO_SYM             shift, and go to state 20
    UCASEFIRST_IDENT_SYM  shift, and go to state 1
    LCASEFIRST_IDENT_SYM  shift, and go to state 21
